--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,13 @@ version: '3'
 
 services:
 
+  app:
+    build: .
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/home/node/app
+
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
     hostname: zookeeper
